Improved rule config style

--- a/src/rules/es.yml
+++ b/src/rules/es.yml
@@ -1,107 +1,108 @@
-array-callback-return: WARN
-constructor-super: WARN
-eqeqeq: [WARN, smart]
-getter-return: WARN
-no-alert: WARN
-no-buffer-constructor: WARN
-no-caller: WARN
-no-class-assign: WARN
-no-compare-neg-zero: WARN
-no-cond-assign: WARN
-no-const-assign: WARN
-no-delete-var: WARN
-no-dupe-args: WARN
-no-dupe-class-members: WARN
-no-dupe-keys: WARN
-no-duplicate-case: WARN
-no-empty-character-class: WARN
-no-empty-pattern: WARN
-no-eval: WARN
-no-ex-assign: WARN
-no-extra-bind: WARN
-no-extra-boolean-cast: WARN
-no-extra-label: WARN
-no-fallthrough: WARN
-no-func-assign: WARN
-no-global-assign: WARN
-no-implicit-coercion: WARN
-no-inner-declarations: WARN
-no-invalid-regexp: WARN
-no-irregular-whitespace: WARN
-no-iterator: WARN
-no-label-var: WARN
-no-multi-spaces: WARN
-no-multi-str: WARN
-no-new: WARN
-no-new-func: WARN
-no-new-symbol: WARN
-no-obj-calls: WARN
-no-octal: WARN
-no-proto: WARN
-no-redeclare: WARN
-no-regex-spaces: WARN
-no-return-await: WARN
-no-self-assign: WARN
-no-self-compare: WARN
-no-sequences: WARN
-no-shadow: WARN
-no-sparse-arrays: WARN
-no-this-before-super: WARN
-no-throw-literal: WARN
-no-unexpected-multiline: WARN
-no-unreachable: WARN
-no-unsafe-finally: WARN
-no-unsafe-negation: WARN
-no-unused-labels: WARN
-no-unused-vars: WARN
-no-useless-call: WARN
-no-useless-computed-key: WARN
-no-useless-concat: WARN
-no-useless-constructor: WARN
-no-useless-escape: WARN
-no-useless-rename: WARN
-no-var: WARN
-no-void: WARN
-object-shorthand: WARN
-prefer-destructuring:
-  - WARN
-  - array: false
-prefer-promise-reject-errors: WARN
-prefer-spread: WARN
-prefer-template: WARN
-radix: WARN
-require-yield: WARN
-semi: [WARN, never]
-use-isnan: WARN
-valid-typeof: WARN
-yoda: WARN
-no-undef: WARN
-no-undef-init: WARN
-no-return-assign:
-  - WARN
-  - always
-no-use-before-define: WARN
-no-constructor-return: WARN
-no-setter-return: WARN
-no-constant-binary-expression: WARN
-no-restricted-imports:
-  - WARN
-  - paths:
-      - name: lodash
-        message: Use lodash-es
-      - name: ensure-array
-        message: Use sure-array
-      - name: "@absolunet/fsp"
-        message: Use fs-extra
-      - name: "@absolunet/fss"
-        message: Use fs-extra
-      - name: opn
-        message: Use open
-      - name: pify
-        message: Use util.promisify
-      - name: fs/promises
-        message: Use fs-extra (more stable)
-      - name: node:fs/promises
-        message: Use fs-extra (more stable)
-      - name: execall
-        message: Use super-regex
+rules:
+  array-callback-return: WARN
+  constructor-super: WARN
+  eqeqeq: [WARN, smart]
+  getter-return: WARN
+  no-alert: WARN
+  no-buffer-constructor: WARN
+  no-caller: WARN
+  no-class-assign: WARN
+  no-compare-neg-zero: WARN
+  no-cond-assign: WARN
+  no-const-assign: WARN
+  no-delete-var: WARN
+  no-dupe-args: WARN
+  no-dupe-class-members: WARN
+  no-dupe-keys: WARN
+  no-duplicate-case: WARN
+  no-empty-character-class: WARN
+  no-empty-pattern: WARN
+  no-eval: WARN
+  no-ex-assign: WARN
+  no-extra-bind: WARN
+  no-extra-boolean-cast: WARN
+  no-extra-label: WARN
+  no-fallthrough: WARN
+  no-func-assign: WARN
+  no-global-assign: WARN
+  no-implicit-coercion: WARN
+  no-inner-declarations: WARN
+  no-invalid-regexp: WARN
+  no-irregular-whitespace: WARN
+  no-iterator: WARN
+  no-label-var: WARN
+  no-multi-spaces: WARN
+  no-multi-str: WARN
+  no-new: WARN
+  no-new-func: WARN
+  no-new-symbol: WARN
+  no-obj-calls: WARN
+  no-octal: WARN
+  no-proto: WARN
+  no-redeclare: WARN
+  no-regex-spaces: WARN
+  no-return-await: WARN
+  no-self-assign: WARN
+  no-self-compare: WARN
+  no-sequences: WARN
+  no-shadow: WARN
+  no-sparse-arrays: WARN
+  no-this-before-super: WARN
+  no-throw-literal: WARN
+  no-unexpected-multiline: WARN
+  no-unreachable: WARN
+  no-unsafe-finally: WARN
+  no-unsafe-negation: WARN
+  no-unused-labels: WARN
+  no-unused-vars: WARN
+  no-useless-call: WARN
+  no-useless-computed-key: WARN
+  no-useless-concat: WARN
+  no-useless-constructor: WARN
+  no-useless-escape: WARN
+  no-useless-rename: WARN
+  no-var: WARN
+  no-void: WARN
+  object-shorthand: WARN
+  prefer-destructuring:
+    - WARN
+    - array: false
+  prefer-promise-reject-errors: WARN
+  prefer-spread: WARN
+  prefer-template: WARN
+  radix: WARN
+  require-yield: WARN
+  semi: [WARN, never]
+  use-isnan: WARN
+  valid-typeof: WARN
+  yoda: WARN
+  no-undef: WARN
+  no-undef-init: WARN
+  no-return-assign:
+    - WARN
+    - always
+  no-use-before-define: WARN
+  no-constructor-return: WARN
+  no-setter-return: WARN
+  no-constant-binary-expression: WARN
+  no-restricted-imports:
+    - WARN
+    - paths:
+        - name: lodash
+          message: Use lodash-es
+        - name: ensure-array
+          message: Use sure-array
+        - name: "@absolunet/fsp"
+          message: Use fs-extra
+        - name: "@absolunet/fss"
+          message: Use fs-extra
+        - name: opn
+          message: Use open
+        - name: pify
+          message: Use util.promisify
+        - name: fs/promises
+          message: Use fs-extra (more stable)
+        - name: node:fs/promises
+          message: Use fs-extra (more stable)
+        - name: execall
+          message: Use super-regex
