Added more comments

--- a/src/rules/typescript-style.yml
+++ b/src/rules/typescript-style.yml
@@ -3,20 +3,20 @@ prefix: '@typescript-eslint'
 rules:
   method-signature-style: WARN # https://typescript-eslint.io/rules/method-signature-style
   array-type: WARN # https://typescript-eslint.io/rules/array-type
-  class-literal-property-style: WARN
-  no-unnecessary-boolean-literal-compare: WARN
-  prefer-as-const: WARN
-  prefer-function-type: WARN
-  prefer-includes: WARN
-  prefer-optional-chain: WARN
-  prefer-string-starts-ends-with: WARN
-  sort-type-constituents: WARN
-  type-annotation-spacing: WARN
-  consistent-indexed-object-style: WARN
-  consistent-type-assertions: WARN
-  consistent-type-definitions: WARN
-  member-delimiter-style: WARN
-  delimiter-style:
+  class-literal-property-style: WARN # https://typescript-eslint.io/rules/class-literal-property-style
+  no-unnecessary-boolean-literal-compare: WARN # https://typescript-eslint.io/rules/no-unnecessary-boolean-literal-compare
+  prefer-as-const: WARN # https://typescript-eslint.io/rules/prefer-as-const
+  prefer-function-type: WARN # https://typescript-eslint.io/rules/prefer-function-type
+  prefer-includes: WARN # https://typescript-eslint.io/rules/prefer-includes
+  prefer-optional-chain: WARN # https://typescript-eslint.io/rules/prefer-optional-chain
+  prefer-string-starts-ends-with: WARN # https://typescript-eslint.io/rules/prefer-string-starts-ends-with
+  sort-type-constituents: WARN # https://typescript-eslint.io/rules/sort-type-constituents
+  type-annotation-spacing: WARN # https://typescript-eslint.io/rules/type-annotation-spacing
+  consistent-indexed-object-style: WARN # https://typescript-eslint.io/rules/consistent-indexed-object-style
+  consistent-type-assertions: WARN # https://typescript-eslint.io/rules/consistent-type-assertions
+  consistent-type-definitions: WARN # https://typescript-eslint.io/rules/consistent-type-definitions
+  member-delimiter-style: WARN # https://typescript-eslint.io/rules/member-delimiter-style
+  delimiter-style: # https://eslint.org/docs/rules/comma-dangle
     - WARN
     - singleline:
         delimiter: none
@@ -24,4 +24,4 @@ rules:
       multiline:
         delimiter: none
         requireLast: false
-  no-meaningless-void-operator: WARN
+  no-meaningless-void-operator: WARN # https://typescript-eslint.io/rules/no-meaningless-void-operator
