--- a/src/presets/index/config.yml
+++ b/src/presets/index/config.yml
@@ -10,6 +10,7 @@ parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaVersion: latest
   sourceType: module
+  project: true
 globals:
   GOOGLE_ANALYTICS_TRACKING_ID: "readonly"
   __non_webpack_require__: "readonly"
