fix: Fixed typescript rule config

--- a/src/rules/typescript-style.yml
+++ b/src/rules/typescript-style.yml
@@ -11,8 +11,7 @@ rules:
   consistent-indexed-object-style: WARN # https://typescript-eslint.io/rules/consistent-indexed-object-style
   consistent-type-assertions: WARN # https://typescript-eslint.io/rules/consistent-type-assertions
   consistent-type-definitions: WARN # https://typescript-eslint.io/rules/consistent-type-definitions
-  member-delimiter-style: WARN # https://typescript-eslint.io/rules/member-delimiter-style
-  delimiter-style: # https://eslint.org/docs/rules/comma-dangle
+  member-delimiter-style: # https://typescript-eslint.io/rules/member-delimiter-style
     - WARN
     - singleline:
         delimiter: none
