--- a/src/rules/typescript-override-eslint.yml
+++ b/src/rules/typescript-override-eslint.yml
@@ -1,33 +1,33 @@
-# These are rules that also exist in eslint, but wher TypeScript provides a more stabile variant of
+# These are rules that also exist in eslint, but where TypeScript provides a more stable variant of
 # https://typescript-eslint.io/rules/#extension-rules
 prefix: '@typescript-eslint'
 rules:
-  dot-notation: WARN
-  no-array-constructor: WARN
-  no-dupe-class-members: WARN
-  no-redeclare: WARN
+  dot-notation: WARN # https://typescript-eslint.io/rules/dot-notation
+  no-array-constructor: WARN # https://eslint.org/docs/rules/no-array-constructor
+  no-dupe-class-members: WARN # https://eslint.org/docs/rules/no-dupe-class-members
+  no-redeclare: WARN # https://eslint.org/docs/rules/no-redeclare
   no-restricted-imports:
-    - WARN
+    - WARN # https://eslint.org/docs/rules/no-restricted-imports
     - paths:
         - name: lodash
-          message: Use lodash-es
+          message: Use lodash-es # https://www.npmjs.com/package/lodash-es
         - name: ensure-array
-          message: Use sure-array
+          message: Use sure-array # https://www.npmjs.com/package/sure-array
         - name: "@absolunet/fsp"
-          message: Use fs-extra
+          message: Use fs-extra # https://www.npmjs.com/package/fs-extra
         - name: "@absolunet/fss"
-          message: Use fs-extra
+          message: Use fs-extra # https://www.npmjs.com/package/fs-extra
         - name: opn
-          message: Use open
+          message: Use open # https://www.npmjs.com/package/open
         - name: pify
-          message: Use util.promisify
+          message: Use util.promisify # https://nodejs.org/dist/latest/docs/api/util.html#util_util_promisify_original
         - name: fs/promises
-          message: Use fs-extra (more stable)
+          message: Use fs-extra (more stable) # https://www.npmjs.com/package/fs-extra
         - name: node:fs/promises
-          message: Use fs-extra (more stable)
+          message: Use fs-extra (more stable) # https://www.npmjs.com/package/fs-extra
         - name: execall
-          message: Use super-regex
-  no-shadow: WARN
-  no-throw-literal: WARN
-  no-useless-constructor: WARN
-  no-return-await: WARN
+          message: Use super-regex # https://www.npmjs.com/package/super-regex
+  no-shadow: WARN # https://eslint.org/docs/rules/no-shadow
+  no-throw-literal: WARN # https://eslint.org/docs/rules/no-throw-literal
+  no-useless-constructor: WARN # https://eslint.org/docs/rules/no-useless-constructor
+  no-return-await: WARN # https://eslint.org/docs/rules/no-return-await
