--- a/src/rules/typescript-override-eslint.yml
+++ b/src/rules/typescript-override-eslint.yml
@@ -30,4 +30,4 @@ rules:
   no-shadow: WARN # https://typescript-eslint.io/rules/no-shadow
   no-throw-literal: WARN # https://typescript-eslint.io/rules/no-throw-literal
   no-useless-constructor: WARN # https://typescript-eslint.io/rules/no-useless-constructor
-  no-return-await: WARN # https://typescript-eslint.io/rules/no-return-await
+  return-await: WARN # https://typescript-eslint.io/rules/no-return-await
