fix: Fixed member-delimiter-style options

--- a/src/rules/typescript-style.yml
+++ b/src/rules/typescript-style.yml
@@ -14,7 +14,7 @@ rules:
   member-delimiter-style: # https://typescript-eslint.io/rules/member-delimiter-style
     - WARN
     - singleline:
-        delimiter: none
+        delimiter: comma
         requireLast: false
       multiline:
         delimiter: none
