--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "read-file-yaml": "^2.0.0"
   },
   "scripts": {
-    "build": "node src/build.js",
+    "build": "tsx src/build.ts",
     "release": "npm run build && foreach -g \"dist/build/*\" -x \"npm publish dist/build/#{base}\"",
     "unused-rules": "npm run build && cross-env eslint-find-rules --unused dist/build/react/index.json",
     "test": "NODE_ENV=production jest"
