--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "publishimo": "^5.0.6",
     "sort-keys": "^5.0.0",
     "tsconfig-jaid": "^4.3.0",
-    "read-file-yaml": "^2.0.0"
+    "read-file-yaml": "^2.0.0",
+    "yaml": "^2.3.1",
+    "showdown": "^2.1.0",
+    "handlebars": "^4.7.8"
   },
   "scripts": {
     "build": "tsx src/build.ts",
