--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "browserslist-config-jaid-node": "3.0.0",
     "eslint": "^8.47.0",
     "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
