--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -3,7 +3,6 @@ on:
   push:
     branches: [main]
 permissions:
-  contents: read
   pages: write
   id-token: write
 concurrency:
@@ -24,6 +23,8 @@ jobs:
       - id: build
         name: build
         run: npm run build
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - id: buildPage
         name: buildPage
         run: npm run buildPage
