--- a/src/rules/typescript.yml
+++ b/src/rules/typescript.yml
@@ -17,3 +17,6 @@ rules:
   no-unsafe-enum-comparison: WARN # https://typescript-eslint.io/rules/no-unsafe-enum-comparison
   no-unsafe-member-access: WARN # https://typescript-eslint.io/rules/no-unsafe-member-access
   no-unsafe-return: WARN # https://typescript-eslint.io/rules/no-unsafe-return
+  no-redundant-type-constituents: WARN # https://typescript-eslint.io/rules/no-redundant-type-constituents
+  no-unsafe-declaration-merging: WARN # https://typescript-eslint.io/rules/no-unsafe-declaration-merging
+  unbound-method: WARN # https://typescript-eslint.io/rules/unbound-method
