--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "@typescript-eslint/parser": "^6.4.0",
     "browserslist-config-jaid-node": "3.0.0",
     "eslint": "^8.47.0",
-    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-n": "^16.0.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unicorn": "^48.0.1",
     "eslint-plugin-you-dont-need-lodash-underscore": "^6.12.0",
-    "eslint-plugin-import-quotes": "^0.0.1"
+    "eslint-plugin-import-quotes": "^0.0.1",
+    "eslint-plugin-i": "^2.28.0-2",
+    "eslint-import-resolver-typescript": "^3.6.0"
   },
   "devDependencies": {
     "babel-preset-jaid": "17.0.0",
@@ -43,8 +44,7 @@
     "handlebars": "^4.7.8",
     "tsx": "^3.12.7",
     "type-fest": "^4.2.0",
-    "@atao60/fse-cli": "^0.1.9",
-    "eslint-plugin-i": "^2.28.0-2"
+    "@atao60/fse-cli": "^0.1.9"
   },
   "scripts": {
     "build": "tsx src/build.ts",
