--- a/src/rules/simple-import-sort.yml
+++ b/src/rules/simple-import-sort.yml
@@ -4,6 +4,7 @@ rules:
     - WARN
     - groups:
       - ["^\\u0000"] # Side effects
+      - ["^@types/", "/types$", "/typings$", "/typing$", "/tsd$", "\\.d\\.ts$"] # TypeScript definitions
       - ["^@jest/globals$"] # Jest globals
       - ["^node:"] # Node builtins, see https://nodejs.org/api/esm.html#esm_node_imports
       - ["^@?\\w"] # Packages
