--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "eslint-plugin-you-dont-need-lodash-underscore": "^6.12.0",
     "eslint-plugin-import-quotes": "^0.0.1",
     "eslint-plugin-i": "^2.28.0-2",
-    "eslint-import-resolver-typescript": "^3.6.0"
+    "eslint-import-resolver-typescript": "^3.6.0",
+    "eslint-plugin-regexp": "^1.15.0"
   },
   "devDependencies": {
     "babel-preset-jaid": "17.0.0",
