--- a/src/presets/index/config.yml
+++ b/src/presets/index/config.yml
@@ -6,6 +6,7 @@ plugins:
   - simple-import-sort
   - import-quotes
   - "@typescript-eslint"
+  - regexp
 parser: '@typescript-eslint/parser'
 parserOptions:
   ecmaVersion: latest
