--- a/src/rules/typescript-style.yml
+++ b/src/rules/typescript-style.yml
@@ -9,7 +9,10 @@ rules:
   sort-type-constituents: WARN # https://typescript-eslint.io/rules/sort-type-constituents
   type-annotation-spacing: WARN # https://typescript-eslint.io/rules/type-annotation-spacing
   consistent-indexed-object-style: WARN # https://typescript-eslint.io/rules/consistent-indexed-object-style
-  consistent-type-assertions: WARN # https://typescript-eslint.io/rules/consistent-type-assertions
+  consistent-type-assertions: # https://typescript-eslint.io/rules/consistent-type-assertions
+    - WARN
+    - assertionStyle: angle-bracket
+      objectLiteralTypeAssertions: never
   consistent-type-definitions: [WARN, type] # https://typescript-eslint.io/rules/consistent-type-definitions
   member-delimiter-style: # https://typescript-eslint.io/rules/member-delimiter-style
     - WARN
